package behavioral.state.interfaces;

public interface State {
  void handle();
}
